# wave-motion-engine

./: -  .clangd  .gitmodules  CMakeLists.txt  README.md  save_file.txt
.cache/clangd/index/: main.c.505AD6F31F14C2B0.idx  test.c.422A13BE22FA488E.idx  test.h.99F647AA4AB7E4D1.idx
inc/: basic_buffer.h  buffer.h  camera.h  cube.h  editor.h  graphics.h  keyboard.h  light.h  material.h  mesh.h  model.h  mouse.h  nuklear.h  point_light.h  shader.h  text.h  texture.h  time.h  transform.h  vertex.h
inc/game_objects/: point_light_go.h
inc/glad/: glad.h
inc/lighting/: direction_light.h  light.h  point_light.h  spot_light.h
resources/models/: cube.mtl  sphere.mtl
resources/shaders/: lighting_dps_fs.glsl  lighting_dps_vs.glsl  lighting_maps_fs.glsl  lighting_maps_vs.glsl  text_fs.glsl  text_vs.glsl  texture_fs.glsl  texture_vs.glsl
src/: basic_buffer.c  buffer.c  camera.c  cube.c  editor.c  glad.c  graphics.c  keyboard.c  light.c  main.c  material.c  mesh.c  model.c  mouse.c  point_light.c  shader.c  text.c  texture.c  time.c  transform.c  vertex.c
src/game_objects/: point_light_go.c
src/lighting/: direction_light.c  light.c  point_light.c  spot_light.c
